<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.example</groupId>
        <artifactId>webflow-learn</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>ch01-hello</artifactId>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Spring -->
        <org.springframework.version>5.0.1.RELEASE</org.springframework.version>
        <!-- Spring Web Flow -->
        <spring.webflow>2.5.0.RELEASE</spring.webflow>
        <httpcore.version>4.4.5</httpcore.version>
        <httpclient.version>4.5.2</httpclient.version>
        <!-- Maven plugins -->
        <maven-resources-plugin.version>2.7</maven-resources-plugin.version>
        <cargo-maven2-plugin.version>1.6.1</cargo-maven2-plugin.version>
        <spring-boot-starter-test.version>1.5.10.RELEASE</spring-boot-starter-test.version>
        <tomee-maven-plugin.version>8.0.1</tomee-maven-plugin.version>
    </properties>

    <dependencies>
        <!-- Spring -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-webmvc</artifactId>
        </dependency>
        <!-- Spring Web Flow -->
        <dependency>
            <groupId>org.springframework.webflow</groupId>
            <artifactId>spring-webflow</artifactId>
            <version>${spring.webflow}</version>
        </dependency>
        <!-- web -->
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>jstl</artifactId>
            <scope>runtime</scope>
        </dependency>
        <!-- Test -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>spring-mvc-webflow</finalName>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.tomee.maven</groupId>
                <artifactId>tomee-maven-plugin</artifactId>
                <version>9.0.0</version>
                <configuration>
                    <tomeeHttpPort>8080</tomeeHttpPort>
                    <context>spring-mvc-webflow</context>
                    <reloadOnUpdate>true</reloadOnUpdate>
                    <tomeeClassifier>plume</tomeeClassifier>
                    <synchronization>
                        <extensions>
                            <extension>.class</extension>
                        </extensions>
                    </synchronization>
                    <args>-Xmx2048m -XX:PermSize=256m -Dtomee.serialization.class.blacklist=-
                        -Dtomee.serialization.class.whitelist=*
                    </args>
                    <removeDefaultWebapps>true</removeDefaultWebapps>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>3.4.0</version>
                <configuration>
                    <failOnMissingWebXml>false</failOnMissingWebXml>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
        </plugins>
    </build>


</project>